# bevy_2d_game

./: Cargo.toml  LICENSE  README.md  index.html
src/: hud_ui.rs  main.rs  menu_ui.rs  player.rs  store_ui.rs  ui.rs
