[package]
name = "bevy_2d_game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] } 
bevy_rapier2d = "0.23.0"
rand = "0.8.5"
bevy_prototype_lyon = "0.10.0"
pathfinding = "4.4.0"
